SERVER-44763 Remove gotools from build and packaging

--- a/debian/mongodb-parameters.5
+++ b/debian/mongodb-parameters.5
@@ -1103,7 +1103,7 @@ To detect unindexed queries without \fBnotablescan\fP, consider reading
 the /tutorial/evaluate\-operation\-performance and
 /tutorial/optimize\-query\-performance\-with\-indexes\-and\-projections
 sections and using the \fI\%logLevel\fP parameter,
-/reference/program/mongostat and profiling\&.
+the mongostat tool, and profiling\&.
 .sp
 Don\(aqt run production \fBmongod\fP instances with
 \fI\%notablescan\fP because preventing collection scans can potentially
