--- a/README
+++ b/README
@@ -1,22 +1,22 @@
-MongoDB README
+# MongoDB README
 
 Welcome to MongoDB!
 
-COMPONENTS
+## COMPONENTS
 
   mongod - The database server.
   mongos - Sharding router.
   mongo  - The database shell (uses interactive javascript).
 
-UTILITIES
+## UTILITIES
 
   install_compass   - Installs MongoDB Compass for your platform.
 
-BUILDING
+## BUILDING
 
   See docs/building.md.
 
-RUNNING
+## RUNNING
 
   For command line options invoke:
 
@@ -31,7 +31,7 @@ RUNNING
     $ ./mongo
     > help
 
-INSTALLING COMPASS
+## INSTALLING COMPASS
 
   You can install compass using the install_compass script packaged with MongoDB:
 
@@ -40,47 +40,3 @@ INSTALLING COMPASS
   This will download the appropriate MongoDB Compass package for your platform
   and install it.
 
-DRIVERS
-
-  Client drivers for most programming languages are available at
-  https://docs.mongodb.com/manual/applications/drivers/. Use the shell
-  ("mongo") for administrative tasks.
-
-BUG REPORTS
-
-  See https://github.com/mongodb/mongo/wiki/Submit-Bug-Reports.
-
-PACKAGING
-
-  Packages are created dynamically by the package.py script located in the
-  buildscripts directory. This will generate RPM and Debian packages.
-
-DOCUMENTATION
-
-  https://docs.mongodb.com/manual/
-
-CLOUD HOSTED MONGODB
-
-  https://www.mongodb.com/cloud/atlas
-
-MAIL LISTS
-
-  https://groups.google.com/forum/#!forum/mongodb-user
-
-    A forum for technical questions about using MongoDB.
-
-  https://groups.google.com/forum/#!forum/mongodb-dev
-
-    A forum for technical questions about building and developing MongoDB.
-
-LEARN MONGODB
-
-  https://university.mongodb.com/
-
-LICENSE
-
-  MongoDB is free and the source is available. Versions released prior to
-  October 16, 2018 are published under the AGPL. All versions released after
-  October 16, 2018, including patch fixes for prior versions, are published
-  under the Server Side Public License (SSPL) v1. See individual files for
-  details.
